--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,7 +3,7 @@
 
   <h2>Users</h2>
 
-  <form>
+  <form action="/registered", method = "POST">
     Please enter your Email:
     <input type="text" name="email">
      <br/> <br/>
