--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -4,11 +4,13 @@
 
   <h2>Users</h2>
 
-  <form>
-    Please enter your Email:
-    <input type="text" name="email">
+  <form action="/registered", method = "POST">
+    <h1>   Please log in </h1>
+    Email address:
+    <input type="text" name="user_email">
      <br/> <br/>
-    <input type="text" name="pw"> <br/> <br/>
+     Password:
+    <input type="text" name="password"> <br/> <br/>
     <input type="submit" value ="Please Submit ">
 
 
