final work on ratings lab

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
+<form action="/user_info">
+
   <h2>Users</h2>
 
   <ul>
@@ -13,4 +16,5 @@
     {% endfor %}
   </ul>
 
+</form>
 {% endblock %}
