--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,9 @@
 <p><a href="/movies">View all movies</a></p>
 
 <h2>Users</h2>
-<p><a href="/users">View all users</a></p>
+<p><a href="/users">View all users</a></p><br>
+<form action="/logout">
+<input type="submit" value="Log Out">
+</form>
 
 {% endblock %}
