--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -4,13 +4,13 @@
 
   <h2>Users</h2>
 
-  <form action="/registered", method = "POST">
+  <form action="/user_login", method = "POST">
     <h1>   Please log in </h1>
     Email address:
     <input type="text" name="user_email">
      <br/> <br/>
      Password:
-    <input type="text" name="password"> <br/> <br/>
+    <input type="password" name="password"> <br/> <br/>
     <input type="submit" value ="Please Submit ">
 
 
